unpackaged/main/default/objects/Funding_Payment__c/Funding_Payment__c.object-meta.xml
<CustomObject>
    <label>Funding Payment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Funding Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>