unpackaged/main/default/objects/Funding_Payment__c/fields/Amount_Debited__c.field-meta.xml
<CustomField>
    <fullName>Amount_Debited__c</fullName>
    <label>Amount Debited</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>