unpackaged/main/default/objects/Funding_Payment__c/fields/Amount_Debited_x_No_of_Periods__c.field-meta.xml
<CustomField>
    <fullName>Amount_Debited_x_No_of_Periods__c</fullName>
    <description>Multiple Amount Debited by the Number of Period based on Frequency</description>
    <formula>CASE(
  Frequency__c,
  'Daily', 21,
  'Weekly', 4.33,
  1
)
*
 Amount_Debited__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Debited x No. of Periods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>