unpackaged/main/default/objects/Funding_Payment__c/fields/Bounces__c.field-meta.xml
<CustomField>
    <fullName>Bounces__c</fullName>
    <label>Bounces</label>
    <length>4</length>
    <type>Text</type>
</CustomField>