unpackaged/main/default/objects/Funding_Payment__c/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder</label>
    <referenceTo>Funder__c</referenceTo>
    <relationshipLabel>Funding Payments</relationshipLabel>
    <relationshipName>Funding_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>