unpackaged/main/default/objects/Funding_Payment__c/fields/Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>Funder_Name__c</fullName>
    <label>Funder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>