unpackaged/main/default/objects/Funding_Payment__c/fields/FunderIdInCapRise__c.field-meta.xml
<CustomField>
    <fullName>FunderIdInCapRise__c</fullName>
    <formula>Funder__r.IdInCapRise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FunderIdInCapRise</label>
    <type>Text</type>
</CustomField>