unpackaged/main/default/objects/Funding_Payment__c/fields/Month_Year_Helper_Acct_1__c.field-meta.xml
<CustomField>
    <fullName>Month_Year_Helper_Acct_1__c</fullName>
    <description>Get the month and year so that a Roll-Up Summary Field can calculate the most recent month. For Account 1</description>
    <formula>VALUE(
   IF( 
      ISPICKVAL(
         Account__c, 
         'Account 1'
      ),  
      TEXT( Year__c ),
      '1970'
   )
   &amp;
   CASE(
      Month__c,
      'January', '01',
      'February', '02',
      'March', '03',
      'April', '04',
      'May', '05',
      'June', '06',
      'July', '07',
      'August', '08',
      'September', '09',
      'October', '10',
      'November', '11',
      'December', '12',
      '01'
   )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month/Year Helper Act. 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>