unpackaged/main/default/objects/Funding_Payment__c/fields/Month_Year_Helper_is_Max_Acct_2__c.field-meta.xml
<CustomField>
    <fullName>Month_Year_Helper_is_Max_Acct_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by Process Builder. Checked if Month/Year combination is equal to Max Month/Year Helper on Opportunity. Used to filter Total Amount Debited Roll-up Summary Field. For Account 2</description>
    <label>Month/Year Helper is Max Act. 2</label>
    <type>Checkbox</type>
</CustomField>