unpackaged/main/default/objects/Funding_Payment__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Position</label>
    <type>Checkbox</type>
</CustomField>